--- a/templates/opusapi.html
+++ b/templates/opusapi.html
@@ -9,27 +9,27 @@
 <body>
 <h1>OPUS-API</h1>
 <p>Use parameters <code>corpus</code>, <code>source</code>, <code>target</code>, <code>preprocessing</code> and <code>version</code> to search for corpora. Set <code>version</code> to <code>latest</code> to get the latest version. For example: <br><br>
-<a href="http://opus.nlpl.eu/opusapi/?corpus=OpenSubtitles&source=en&target=fi&preprocessing=xml&version=latest">http://opus.nlpl.eu/opusapi/?corpus=OpenSubtitles&source=en&target=fi&preprocessing=xml&version=latest</a>
+<a href="{{ baseurl }}?corpus=OpenSubtitles&source=en&target=fi&preprocessing=xml&version=latest">{{ baseurl }}?corpus=OpenSubtitles&source=en&target=fi&preprocessing=xml&version=latest</a>
 <br><br>
 List available copora:
 <br><br>
-<a href="http://opus.nlpl.eu/opusapi/?corpora=True">http://opus.nlpl.eu/opusapi/?corpora=True</a>
+<a href="{{ baseurl }}?corpora=True">{{ baseurl }}?corpora=True</a>
 <br><br>
 List available languages:
 <br><br>
-<a href="http://opus.nlpl.eu/opusapi/?languages=True">http://opus.nlpl.eu/opusapi/?languages=True</a>
+<a href="{{ baseurl }}?languages=True">{{ baseurl }}?languages=True</a>
 <br><br>
 List available languages for a corpus:
 <br><br>
-<a href="http://opus.nlpl.eu/opusapi/?languages=True&corpus=OpenSubtitles">http://opus.nlpl.eu/opusapi/?languages=True&corpus=OpenSubtitles</a>
+<a href="{{ baseurl }}?languages=True&corpus=OpenSubtitles">{{ baseurl }}?languages=True&corpus=OpenSubtitles</a>
 <br><br>
 List available target languages for a source language:
 <br><br>
-<a href="http://opus.nlpl.eu/opusapi/?languages=True&source=fi">http://opus.nlpl.eu/opusapi/?languages=True&source=fi</a>
+<a href="{{ baseurl }}?languages=True&source=fi">{{ baseurl }}?languages=True&source=fi</a>
 <br><br>
 List available target languages for a source language in a corpus:
 <br><br>
-<a href="http://opus.nlpl.eu/opusapi/?languages=True&corpus=OpenSubtitles&source=fi">http://opus.nlpl.eu/opusapi/?languages=True&corpus=OpenSubtitles&source=fi</a>
+<a href="{{ baseurl }}?languages=True&corpus=OpenSubtitles&source=fi">{{ baseurl }}?languages=True&corpus=OpenSubtitles&source=fi</a>
 </p>
 </body>
 
